Conformance/Compiler/testsuite/src/tests/a_cangjie_grammar_summary/01_lexical_grammar/01_comments/a01/test_a01_03.cj

/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
 * This source file is part of the Cangjie project, licensed under Apache-2.0
 * with Runtime Library Exception.
 * 
 * See https://cangjie-lang.cn/pages/LICENSE for license information.
 */

/*
  @Name:        A_01_01_a01_03

  @Level:         1
  @Assertion:   A.1.1(1)
                DelimitedComment
                    : '/*' ( DelimitedComment | . )*? '*/'
                    ;
  @Description: Check delimited comment syntax
  @Comment:     Auto-generated tests by gen_comments_tests_a01.py with seed = 1
  @Mode:        run
  @Negative:    no
  @Structure:   single
*/
import utils.assert.Assert

/* x=gg1() // f2 class B happens before

 */

main() { /*  */
  var t1: Int64 = 123 /* /*  */
13.2.1 Type Conversion Between Class/Interface does not only the fcan infer the function

0..5:2] // According to define the
/* denote the keyword case, the pattern after evaluatingTr{ func catchE (){ f<Base >(Base(), Sub()) // Same as follows:

Monitor lock, blocks the underline _acts as the parameter 'a' // B.cj macro attributes
/* numfalls in different extensions of the parameter is equal method ↪ func

module.json example conversions that represents

 */

/* /* /* /* facilitates concise syntax

childOne :Int64 { 0 -0.0 **y=POSITIVE_INFINITY // regular parameters are examples of the modifiers.e_m, a_m+1:e_m+1, a_k:e_k) , other :E1 } class implements two extensions. 5.The

exceptional or for a single-line string "#  func foo(a:A){A()}
 */
2.4 Type If the JavaScript as expressions (i.e., with respect to access
defining an exception. func f():Unit } main() { ()// ok, f = false if
/*  */
{2}// return values of expr1orexpr2, since/*  */

 */ */BOOL | '>' | REDEF | IMPORT |
amutable instance member variables (whose value is as shown in Cangjie will jointly
/* .printSize() // Catch with */
(){}// Error, finalizer cannot be differentiable //

 */
FloatLiteral : If no differentiation result is immutable variable name package directory_0 // Within the -enable-state-threading
project is valid. –Function defined as. parenthesizedExpression : (structNonStaticMemberModifier)? structName : LCURL NL* RPAREN ; lineStringContent
 */
/*  */
/*  */
n) can be modified with an inner macro packages and instance functions. For example:{a, b=>a+b} //

/* holds, it is a class UnitExample <:SomeJClass {
/* Type-internal •The type and

/*  */

 */ifToverloadsthesetformoftheoperator [](seeOperators that needs to the need to un-defined behavior
/* `pair[0]` needs to access a separator between tryand {} // error: not allowed to denote the

 */

`<T1, ..., a_jk)

 *//*  */ */
  Assert.equals(123, t1)
  return 0
}

/* **n=NEGATIVE_INFINITY // for all the same Mutexobject, there are obtained from module1

 */
